QuizApp Bookshelf page: Stories / Worksheet links at the bottom is not clickable on devices. Fixed this issue

--- a/quiz-app/public/templates/content-list.html
+++ b/quiz-app/public/templates/content-list.html
@@ -35,8 +35,8 @@
                 <div class='buttons_container'>
                     <div id="arrow_box"><div id="arrow_menu"></div></div>
                     <div class="button_items">
-                        <div id="btn1" class="button_bar"><a href="#">Stories</a></div>
-                        <div id="btn2" class="button_bar"><a href="#">Worksheets</a></div>
+                        <div id="btn1" class="button_bar"><a href="#"><div style="height: 65px; width:45px;">Stories</div></a></div>
+                        <div id="btn2" class="button_bar"><a href="#"><div style="height: 65px; width:75px;">Worksheets</div></a></div>
                     </div>
                 </div>
             </div>
