home button on about us modal.

--- a/quiz-app/public/templates/content-list.html
+++ b/quiz-app/public/templates/content-list.html
@@ -50,6 +50,7 @@
   <ion-modal-view>
     <ion-header-bar class="bar-energized">
         <h1 class="title">EkStep Content App</h1>
+        <button class="button button-clear icon ion-ios-home" ng-click="hideAboutUsPage()"></button>
     </ion-header-bar>
     <ion-content padding="true">
         <div class="item item-text-wrap">
@@ -58,10 +59,12 @@
         </div>
         <div class="item">
             <div style="float: left; width: 50%">
-                Version: 0.2
+                <b>Version:</b><br/>
+                0.2
             </div>
             <div style="float: left; width: 50%">
-                Updated: September 21, 2015
+                <b>Age:</b><br/>
+                5+ Years
             </div>
         </div>
         <div class="item">
@@ -73,10 +76,6 @@
                 <b>Contact:</b><br/>
                 Email: contact@ekstep.org
             </div>
-        </div>
-        <div class="item">
-            <div><img src="assets/privacy.png" style="width: 150px;" /></div>
-            <div>5+ years old</div>
         </div>
         <div class="item">
             <div style="margin-bottom: 5px;"><b>Environment</b></div>
