Exit button implementation..

--- a/quiz-app/public/templates/content-list.html
+++ b/quiz-app/public/templates/content-list.html
@@ -4,6 +4,9 @@
 
             <div class="panel_title">
                 <div class="selected_title_box"><div class="selected_title">Selected Title</div></div>
+                <a href="javascript:void(0)" ng-click="exitApp()" class="button button-clear" style="float: right; color: #000">
+                    <i class="icon ion-close-circled"></i>
+                </a>
                 <a href="javascript:void(0)" ng-click="showAboutUsPage()" class="button button-clear" style="float: right; color: #000">
                     <i class="icon ion-information-circled"></i>
                 </a>
