refresh icon changes

--- a/quiz-app/public/templates/content-list.html
+++ b/quiz-app/public/templates/content-list.html
@@ -10,7 +10,9 @@
                 <a href="javascript:void(0)" ng-click="showAboutUsPage()" class="button button-clear" style="float: right; color: #000">
                     <i class="icon ion-information-circled"></i>
                 </a>
-                <button ng-click="resetContentListCache()" class="button button-clear icon ion-android-refresh" style="float:right; color:#000;"></button>
+                <a href="javascript:void(0)" ng-click="resetContentListCache()" class="button button-clear" style="float: right; color: #000">
+                    <i class="icon ion-android-refresh"></i>
+                </a>
 
             </div><!-- .panel_title -->
             
