Clear content of quizApp implementation.

--- a/quiz-app/public/templates/content-list.html
+++ b/quiz-app/public/templates/content-list.html
@@ -94,6 +94,9 @@
             </ion-radio>
             </div>
         </div>
+        <div class="item">
+            <div style="margin-bottom: 5px;"><b>Clear All Content:</b></div>
+        <button class="button button-clear icon ion-trash-a" ng-click="clearAllContent()" style="float: right; margin-top: -5%;"></button></div>
     </ion-content>
   </ion-modal-view>
 </script>
