--- a/platform-ui/views/includes/common-styles.ejs
+++ b/platform-ui/views/includes/common-styles.ejs
@@ -5,3 +5,4 @@
 <link rel="stylesheet" href="<%=contextPath%>/css/app/web.css" type="text/css"/>
 <link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/font-style.css" type="text/css"/>
 <link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/bootstrap-social.css" type="text/css"/>
+<link rel="stylesheet" href="<%=contextPath%>/css/thirdparty/bootstrap-select.css" type="text/css"/>
