--- a/platform-ui/views/includes/header-scripts.ejs
+++ b/platform-ui/views/includes/header-scripts.ejs
@@ -7,3 +7,4 @@
 <script src="<%=contextPath%>/js/thirdparty/angular.min.js"></script>
 <script src="<%=contextPath%>/js/thirdparty/angular-route.min.js"></script>
 <script src="<%=contextPath%>/js/thirdparty/angular-ui-router.min.js"></script>
+<script src="<%=contextPath%>/js/thirdparty/bootstrap-select.min.js"></script>
