--- a/platform-ui/views/includes/commonTemplates.ejs
+++ b/platform-ui/views/includes/commonTemplates.ejs
@@ -27,11 +27,11 @@
         </a>
         <div class="reply-body">
             <div class="user">
-                <div class="il-Link-clr ac-contents display-inline text-capitalize">{{reply.lastModifiedBy}}</div> 
+                <div class="il-Link-clr ac-contents display-inline text-capitalize">{{reply.lastModifiedBy}}</div>
                 <div>
                     <span class="timeDur moveTop8" style="">replied&nbsp;&nbsp;</span><span class="timeDur moveTop8" data-livestamp="{{reply.lastModifiedOn/1000}}"></span>
-                </div> 
-                
+                </div>
+
             </div>
             <div class="wallText" ng-bind-html="reply.comment"></div>
             <a class="pull-right mar-rt-10" ng-click="reply.showForm=true;" ng-show="!reply.showForm"><i class="fa fa-reply"></i></a>
@@ -52,11 +52,11 @@
         </a>
         <div class="reply-body">
             <div class="user">
-                <div class="il-Link-clr ac-contents display-inline text-capitalize">{{childReply.lastModifiedBy}}</div> 
+                <div class="il-Link-clr ac-contents display-inline text-capitalize">{{childReply.lastModifiedBy}}</div>
                 <div>
                     <span class="timeDur moveTop8" style="">replied&nbsp;&nbsp;</span><span class="timeDur moveTop8" data-livestamp="{{childReply.lastModifiedOn/1000}}"></span>
-                </div> 
-                
+                </div>
+
             </div>
             <div class="wallText" ng-bind-html="childReply.comment"></div>
         </div>
@@ -69,11 +69,11 @@
         </a>
         <div class="reply-body">
             <div class="user">
-                <div class="il-Link-clr ac-contents display-inline text-capitalize">{{reply.lastModifiedBy}}</div> 
+                <div class="il-Link-clr ac-contents display-inline text-capitalize">{{reply.lastModifiedBy}}</div>
                 <div>
                     <span class="timeDur moveTop8" style="">replied&nbsp;&nbsp;</span><span class="timeDur moveTop8" data-livestamp="{{reply.lastModifiedOn/1000}}"></span>
-                </div> 
-                
+                </div>
+
             </div>
             <div class="wallText" ng-bind-html="reply.comment"></div>
             <a class="pull-right mar-rt-10" ng-click="reply.showForm=true;" ng-show="!reply.showForm"><i class="fa fa-reply"></i></a>
@@ -94,11 +94,11 @@
         </a>
         <div class="reply-body">
             <div class="user">
-                <div class="il-Link-clr ac-contents display-inline text-capitalize">{{childReply.lastModifiedBy}}</div> 
+                <div class="il-Link-clr ac-contents display-inline text-capitalize">{{childReply.lastModifiedBy}}</div>
                 <div>
                     <span class="timeDur moveTop8" style="">replied&nbsp;&nbsp;</span><span class="timeDur moveTop8" data-livestamp="{{childReply.lastModifiedOn/1000}}"></span>
-                </div> 
-                
+                </div>
+
             </div>
             <div class="wallText" ng-bind-html="childReply.comment"></div>
         </div>
@@ -122,11 +122,11 @@
                             </a>
                             <div class="reply-body">
                                 <div class="user">
-                                    <div class="il-Link-clr ac-contents display-inline text-capitalize">{{currentComment.lastModifiedBy}}</div> 
+                                    <div class="il-Link-clr ac-contents display-inline text-capitalize">{{currentComment.lastModifiedBy}}</div>
                                     <div>
                                         <span class="timeDur moveTop8" style="">commented&nbsp;&nbsp;</span><span class="timeDur moveTop8" data-livestamp="{{currentComment.lastModifiedOn/1000}}"></span>
-                                    </div> 
-                                    
+                                    </div>
+
                                 </div>
                                 <div class="wallText" ng-bind-html="currentComment.comment"></div>
                                 <a class="pull-right mar-rt-10" ng-click="currentComment.showForm=true;" ng-show="!currentComment.showForm"><i class="fa fa-reply"></i></a>
@@ -176,10 +176,10 @@
                             </a>
                             <div class="reply-body">
                                 <div class="user">
-                                    <div class="il-Link-clr ac-contents display-inline text-capitalize">{{commentObject.comment.lastModifiedBy}}</div> 
+                                    <div class="il-Link-clr ac-contents display-inline text-capitalize">{{commentObject.comment.lastModifiedBy}}</div>
                                     <div>
                                         <span class="timeDur moveTop8" style="">commented&nbsp;&nbsp;</span><span class="timeDur moveTop8" data-livestamp="{{commentObject.comment.lastModifiedOn/1000}}"></span>
-                                    </div>                                     
+                                    </div>
                                 </div>
                                 <div class="wallText" ng-bind-html="commentObject.comment.comment"></div>
                             </div>
@@ -190,7 +190,7 @@
                                     <textarea class="textarea form-control" placeholder="Write your comment ..." style="width: 90%; min-height: 50px; margin-left: 11.5%;" id="auditTextArea{{commentObject.comment.id}}"></textarea>
                                     <div class="save_text" style="border: 0px; width: 94%; margin-left: 7.5%">
                                         <div class="save_btn">
-                                            <!--  
+                                            <!--
                                                 <button class="btn btn-default btn-xs mar-rt-10" ng-click="commentObject.comment.showForm=false;">Cancel</button>
                                             -->
                                             <button class="btn btn-primary btn-xs" ng-click="auditCommentReply(commentObject.comment)">Comment</button>
@@ -271,11 +271,11 @@
                             </a>
                             <div class="reply-body">
                                 <div class="user">
-                                    <div class="il-Link-clr ac-contents display-inline text-capitalize">{{comment.lastModifiedBy}}</div> 
+                                    <div class="il-Link-clr ac-contents display-inline text-capitalize">{{comment.lastModifiedBy}}</div>
                                     <div>
                                         <span class="timeDur moveTop10" data-livestamp="{{comment.lastModifiedOn/1000}}"></span>
-                                    </div> 
-                                    
+                                    </div>
+
                                 </div>
                                 <div class="wallText" ng-bind-html="comment.comment"></div>
                             </div>
@@ -371,11 +371,11 @@
                                 </a>
                                 <div class="reply-body">
                                     <div class="user">
-                                        <div class="il-Link-clr ac-contents display-inline">{{ah.lastModifiedBy}}</div> 
+                                        <div class="il-Link-clr ac-contents display-inline">{{ah.lastModifiedBy}}</div>
                                         <div>
                                             <span class="timeDur moveTop10" data-livestamp="{{ah.lastModifiedOn/1000}}"></span>
-                                        </div> 
-                                        
+                                        </div>
+
                                     </div>
                                     <div class="wallText" ng-bind-html="ah.comment.comment"></div>
                                 </div>
@@ -432,6 +432,7 @@
     <select ng-switch-when="Select" ng-model="selectedConcept.metadata[prop.propertyName]" ng-options="val for val in prop.range" class="form-control"></select>
     <input ng-switch-when="Number" type="number" ng-model="selectedConcept.metadata[prop.propertyName]" class="form-control {{prop.error ? 'validation-error': ''}}" placeholder="{{prop.description}}"/>
     <input ng-switch-when="Text" type="text" ng-model="selectedConcept.metadata[prop.propertyName]" class="form-control {{prop.error ? 'validation-error': ''}}"  placeholder="{{prop.description}}"/>
+    <input ng-switch-when="XML" type="text" ng-model="selectedConcept.metadata[prop.propertyName]" class="form-control {{prop.error ? 'validation-error': ''}}"  placeholder="{{prop.description}}"/>
     <div ng-switch-when="URL">
     <div class="col-md-12 noPad">
         Select File:
