--- a/platform-ui/public/templates/player/contentList.html
+++ b/platform-ui/public/templates/player/contentList.html
@@ -4,8 +4,8 @@
       <div class="headerAsk" id="activityStream">
         <h2>{{taxonomies[selectedTaxonomyId].metadata.name}}
           Contents
-          <a class="tool-tip" data-original-title="Add new content" data-placement="bottom" data-toggle="tooltip" href="javascript:void(0);" title="Add new content">
-            <i class="writeBlackOne fa fa-edit" id="writeIcon" onclick="openCreateArea(this, 'fa-edit');"></i>
+          <a class="tool-tip hide" data-original-title="Add new content" data-placement="bottom" data-toggle="tooltip" href="javascript:void(0);" title="Add new content">
+            <i class="writeBlackOne fa fa-plus" id="writeIcon" onclick="openCreateArea(this, 'fa-edit');"></i>
           </a>
         </h2>
         <select class="selectpicker pull-right marginTop10" style="display:none">
