--- a/platform-ui/views/includes/left-sidebar.ejs
+++ b/platform-ui/views/includes/left-sidebar.ejs
@@ -38,9 +38,9 @@
 			</li>
 		</ul>
 	</li>
-	<li class="dropdown coachingTab common_box">
+	<li class="dropdown courseTab common_box">
 		<div class="dropdown dropdown-toggle" data-toggle="dropdown">
-			<i class="coachingImg"></i>
+			<i class="courseImg"></i>
 			<span class="lefttab"> Content</span>
 		</div>
 		<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
