--- a/platform-ui/views/includes/commonTemplates.ejs
+++ b/platform-ui/views/includes/commonTemplates.ejs
@@ -390,7 +390,7 @@
 </div>
 <div class="col-md-12 padTop">
     <div class="alert alert-danger" ng-show="validationMessages.length > 0">
-        Error saving the concept. Following are the failed validations
+        Error saving the data. Following are the failed validations
         <ul style="padding-left: 25px;list-style:disc outside none">
             <li ng-repeat="error in validationMessages">{{error}}</li>
         </ul>
