--- a/platform-ui/public/templates/player/contentList.html
+++ b/platform-ui/public/templates/player/contentList.html
@@ -5,13 +5,12 @@
         <h2>{{taxonomies[selectedTaxonomyId].metadata.name}}
           Contents
           <a class="tool-tip" data-original-title="Add new content" data-placement="bottom" data-toggle="tooltip" href="javascript:void(0);" title="Add new content">
-            <i class="writeBlackOne fa fa-plus" id="writeIcon" onclick="openCreateArea(this, 'fa-edit');"></i>
+            <i class="writeBlackOne fa fa-plus" id="writeIcon" ng-click="openContentCreate(this, 'fa-edit');"></i>
           </a>
         </h2>
         <select class="selectpicker pull-right marginTop10" style="display:none">
           <option data-icon="fa fa-film" value="Story">Story</option>
           <option data-icon="fa fa-flag" value="Worksheet">Worksheet</option>
-          <option data-icon="fa fa-gamepad" value="Game">Game</option>
         </select>
       </div>
       <div class="col-md-12 noPad borderBottom textEditor marginTop20 form-group" id="il-Txt-Editor" style="display:none;">
@@ -25,21 +24,18 @@
             <input class="form-control" ng-model="newContent.code" type="text"/>
           </div>
           <div class="form-group col-md-6 required">
-            <label class="control-label">Logo</label>
-            <input class="form-control" ng-model="newContent.appIcon" type="text"/>
+            <label class="control-label">Language</label>
+            <input class="form-control" ng-model="newContent.language" type="text"/>
           </div>
           <div class="form-group col-md-6 required">
-            <label class="control-label">Owner</label>
-            <input class="form-control" ng-model="newContent.owner" type="text"/>
-          </div>
-          <div class="form-group col-md-12">
-            <label>Body</label>
-            <textarea class="form-control" ng-model="newContent.body" rows="4"></textarea>
+            <label class="control-label">MimeType</label>
+            <select class="form-control" ng-model="newContent.mimeType" ng-options="mimeType for mimeType in mimeTypes">
+            </select>
           </div>
         </div>
         <div class="col-md-12 padBottom">
           <div class="alert alert-danger" ng-show="newContent.errorMessages.length > 0">
-            Error creating game. Following are the failed validations
+            Error creating content:
             <ul style="padding-left: 25px;list-style:disc outside none">
               <li ng-repeat="error in newContent.errorMessages">{{error}}</li>
             </ul>
