--- a/platform-ui/public/templates/player/gameList.html
+++ b/platform-ui/public/templates/player/gameList.html
@@ -29,11 +29,15 @@
                         <label class="control-label">Developer</label>
                         <input type="text" ng-model="newGame.developer" class="form-control"/>
                     </div>
+                    <div class="form-group col-md-6 required">
+                        <label class="control-label">MimeType</label>
+                        <select class="form-control" ng-model="newGame.mimeType" ng-options="mimeType for mimeType in mimeTypes"></select>
+                    </div>
                     <div class="form-group col-md-6">
                         <label>Description</label>
                         <textarea class="form-control" rows="4" ng-model="newGame.description"></textarea>
                     </div>
-                    <div class="form-group col-md-12">
+                    <div class="form-group col-md-6">
                         <label>Comments</label>
                         <textarea class="form-control" rows="4" ng-model="newGame.comment"></textarea>
                     </div>
