--- a/platform-devops/ansible/deploy/roles/deployartifact/templates/producer.properties.j2
+++ b/platform-devops/ansible/deploy/roles/deployartifact/templates/producer.properties.j2
@@ -1,4 +1,4 @@
-metadata.broker.list={{ metadata.broker.list }}
+metadata.broker.list={{ metadata_broker_list }}
 serializer.class=kafka.serializer.StringEncoder
 topic=graphevent_kafka_topic_id
 partition_domain=0
