Updated setup and deploy scripts for LP

--- a/platform-devops/ansible/deploy/roles/deployartifact/templates/properties/learning/consumer-config.xml.j2
+++ b/platform-devops/ansible/deploy/roles/deployartifact/templates/properties/learning/consumer-config.xml.j2
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <ConsumerConfig>
-	<ConsumerInit serverURI="{{ zookeeper_url }}" topic="{{ graphevent_kafka_topic_id }}"
-		ekstepPlatformURI="{{ platform_api_url}} "
+	<ConsumerInit serverURI="{{ zookeeper_url }}" topic="{{ graph_event_topic_id }}"
+		ekstepPlatformURI="{{ platform_api_url }}"
 		ekstepPlatformApiUserId="ilimi">
 	</ConsumerInit>
 	<ConsumerGroups>
