--- a/platform-devops/ansible/deploy/roles/deployartifact/templates/properties/language/database.properties.j2
+++ b/platform-devops/ansible/deploy/roles/deployartifact/templates/properties/language/database.properties.j2
@@ -6,7 +6,7 @@ db.initialSize=2
 db.maxActive=10
 db.validationQuery=select 1
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-hibernate.show_sql=true
+hibernate.show_sql=false
 hibernate.query.substitutions=true 1, false 0
 hibernate.hbm2ddl.auto=none
 hibernate.default_schema={{ mysql_db_schema }}
