--- a/platform-devops/ansible/deploy/roles/deployartifact/templates/properties/language/graph.properties.j2
+++ b/platform-devops/ansible/deploy/roles/deployartifact/templates/properties/language/graph.properties.j2
@@ -3,4 +3,5 @@ redis.host=localhost
 redis.port=6379
 redis.maxConnections=128
 akka.request_timeout=30
-environment.id= {{ environment_id }}
+graph.ids=language,en,hi,ka,te,ta
+environment.id={{ environment_id }}
