--- a/platform-devops/ansible/deploy/roles/deployartifact/templates/properties/language/language-indexes.properties.j2
+++ b/platform-devops/ansible/deploy/roles/deployartifact/templates/properties/language/language-indexes.properties.j2
@@ -1,4 +1,4 @@
-elastic-search-host={{ language_index_host }}
+elastic-search-host=http://{{ language_index_host }}
 elastic-search-port={{ language_index_port }}
 ignoreStartWordsList=<Sentence,id=,<fs,head=,case_name=,paradigm=,name=,inf=
 tagNamesList=NN,NST,PRP,DEM,VM,VAUX,JJ,RB,PSP,RP,CC,WQ,QF,QC,QO,CL,INTF,INJ,NEG,*C,RDP,ECH,UNK,NP,VGF,VGNF,VGINF,VGNN,JJP,RBP,NEGP,CCP,FRAGP,BLK
