Updated setup and deploy scripts for LP

--- a/platform-devops/ansible/setup/roles/logstash/templates/logstash-graph-events.j2
+++ b/platform-devops/ansible/setup/roles/logstash/templates/logstash-graph-events.j2
@@ -22,7 +22,7 @@ output {
    codec => plain {
             format => "%{message}"
         }
-   topic_id => {{ graphevent_kafka_topic_id }}
+   topic_id => "{{ graphevent_kafka_topic_id }}"
    retries => 20
    retry_backoff_ms => 180000
  }
