--- a/platform-devops/ansible/setup/roles/mongodb/templates/mongodb.repo.j2
+++ b/platform-devops/ansible/setup/roles/mongodb/templates/mongodb.repo.j2
@@ -1,5 +1,5 @@
-[mongodb-org-3.0]
-name=MongoDB Repository
-baseurl=https://repo.mongodb.org/yum/redhat/$releasever/mongodb-org/3.0  /x86_64/
+[mongodb-org-2.6]
+name=MongoDB 2.6 Repository
+baseurl=http://downloads-distro.mongodb.org/repo/redhat/os/x86_64/
 gpgcheck=0
 enabled=1
