--- a/platform-devops/ansible/setup/roles/tomcat/templates/catalina.j2
+++ b/platform-devops/ansible/setup/roles/tomcat/templates/catalina.j2
@@ -98,7 +98,7 @@
 #                   LOGGING_MANAGER="-Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager"
 # -----------------------------------------------------------------------------
 
-export JAVA_OPTS="{{ tomcat_init_mem }} {{ tomcat_max_mem }}  -XX:+CMSClassUnloadingEnabled  {{ tomcat_perm_size }}"
+export JAVA_OPTS="{{ tomcat_init_mem }} {{ tomcat_max_mem }}  -XX:+CMSClassUnloadingEnabled  {{ tomcat_perm_size }} -Dfile.encoding=UTF8"
 
 # OS specific support.  $var _must_ be set to either true or false.
 cygwin=false
