Updated language_update role

--- a/platform-devops/ansible/roles/language_update/templates/language_script.j2
+++ b/platform-devops/ansible/roles/language_update/templates/language_script.j2
@@ -11,7 +11,7 @@ cd docs/language_model/definitions/iso                    #move inside th folder
 for file1 in *
 do
    json_content1=`cat $file1`
-   curl -i -X POST -H "Content-Type: application/json" -H "user-id: ansible_user" -d "$json_content1" http://{{ service_url }}/language-service/v1/language/language/importDefinition
+   curl -i -X POST -H "Content-Type: application/json" -H "user-id: ansible_user" -d "$json_content1" https://{{ service_url }}/language/v1/language/language/importDefinition
 done
 
 
@@ -21,6 +21,6 @@ cd docs/language_model/definitions/language                #move inside th folde
 for file1 in *
 do
    json_content1=`cat $file1`
-   curl -i -X POST -H "Content-Type: application/json" -H "user-id: ansible_user" -d "$json_content1" http://{{ service_url }}/language-service/v1/language/$1/importDefinition
+   curl -i -X POST -H "Content-Type: application/json" -H "user-id: ansible_user" -d "$json_content1" https://{{ service_url }}/language/v1/language/$1/importDefinition
 done
 
