changed https to http

--- a/platform-devops/ansible/roles/definition_update/templates/definition_script.j2
+++ b/platform-devops/ansible/roles/definition_update/templates/definition_script.j2
@@ -12,7 +12,7 @@ cd /home/jenkins/workspace/LP_Definition_Update/docs/domain_model_v2/definitions
 for file in *                        
 do
    variable=`cat $file`
-   curl -i -X POST -H "Content-Type: application/json" -H "user-id: ansible_user" -d "$variable" https://{{ service_url }}/learning-service/taxonomy/domain/definition
+   curl -i -X POST -H "Content-Type: application/json" -H "user-id: ansible_user" -d "$variable" http://{{ service_url }}/learning-service/taxonomy/domain/definition
 done
 
 
