--- a/platform-devops/ansible/roles/deployartifact/templates/language/elasticsearch.properties.j2
+++ b/platform-devops/ansible/roles/deployartifact/templates/language/elasticsearch.properties.j2
@@ -4,3 +4,4 @@ query-search-fields=name^100,title^100,lemma^100,code^100,tags^100,domain,subjec
 bulk-load-batch-size=500
 connection-timeout=30
 date-fields=lastUpdatedOn,createdOn,versionDate,lastSubmittedOn,lastPublishedOn
+platform-api-url={{ platform_api_url }}
