--- a/platform-devops/ansible/roles/neo4j/templates/neo4j_script.j2
+++ b/platform-devops/ansible/roles/neo4j/templates/neo4j_script.j2
@@ -5,19 +5,19 @@
 #DESCRIPTION:Script for lp-neo4j-update.
 #DATE:22-08-16
 #************************************************
-NEO4J_HOME={{ neo4j_home }}
-cd /data/graphDB                 #move inside th folder
+ NEO4J_HOME={{ neo4j_home }}
+# cd /data/graphDB                 #move inside th folder
 
-#*****************************************************
-for file in *                        
-do
-	rm -rf $NEO4J_HOME/data/databases/$file
-	a="dbms.active_database=.*"
-	b="dbms.active_database=$file"
-	`sed -i '' "s/$a/$b/" $NEO4J_HOME/conf/neo4j.conf`
-	cd $NEO4J_HOME/bin
-    `./neo4j-admin import --mode=database --database=$file --from=/data/graphDB/$file`
-done
+# #*****************************************************
+# for file in *                        
+# do
+# 	rm -rf $NEO4J_HOME/data/databases/$file
+# 	a="dbms.active_database=.*"
+# 	b="dbms.active_database=$file"
+# 	`sed -i '' "s/$a/$b/" $NEO4J_HOME/conf/neo4j.conf`
+# 	cd $NEO4J_HOME/bin
+#     `./neo4j-admin import --mode=database --database=$file --from=/data/graphDB/$file`
+# done
 
-cp -r $NEO4J_HOME/data/databases/ /data/graphDB
+cp -r $NEO4J_HOME/data/databases/ /data/graphDB/
 
