--- a/platform-devops/ansible/roles/neo4j/templates/neo4j_script.j2
+++ b/platform-devops/ansible/roles/neo4j/templates/neo4j_script.j2
@@ -19,5 +19,5 @@ do
     `./neo4j-admin import --mode=database --database=$file --from=/data/graphDB/$file`
 done
 
-cp -r $NEO4J_HOME/data/databases/ /data/graphDB
+cp -r $NEO4J_HOME/data/databases/* /data/graphDB/
 
