--- a/platform-devops/ansible/roles/Stopservice/templates/stop_script.j2
+++ b/platform-devops/ansible/roles/Stopservice/templates/stop_script.j2
@@ -5,6 +5,18 @@
 #DESCRIPTION:Script for lp-stop-service.
 #DATE:25-08-16
 #************************************************
-kill -9 `pgrep -f redis`
-kill -9 `pgrep -f language-graph-events.conf`
-kill -9 `pgrep -f logstash-graph-events.conf`
+if [ `ps -ef | grep redis | grep -v grep | wc -l` -ge 1 ]
+then 
+	kill -9 `pgrep -f redis`
+fi
+
+if [ `ps -ef | grep language-graph-events.conf | grep -v grep | wc -l` -ge 1 ]
+then 
+	kill -9 `pgrep -f language-graph-events.conf`
+fi
+
+if [ `ps -ef | grep logstash-graph-events.conf | grep -v grep | wc -l` -ge 1 ]
+then 
+	kill -9 `pgrep -f logstash-graph-events.conf`
+
+fi
