--- a/platform-devops/ansible/roles/neo4j/templates/neo4j_script.j2
+++ b/platform-devops/ansible/roles/neo4j/templates/neo4j_script.j2
@@ -6,18 +6,23 @@
 #DATE:22-08-16
 #************************************************
 NEO4J_HOME={{ neo4j_home }}
+a="#dbms.active_database=.*"
+b="dbms.active_database=check"
+`sed -i -- "s/$a/$b/" $NEO4J_HOME/conf/neo4j.conf` 
 cd /data/graphDB                 #move inside th folder
 
 #*****************************************************
 for file in *                        
 do
 	rm -rf $NEO4J_HOME/data/databases/$file
-	a="#dbms.active_database=.*"
-	b="dbms.active_database=$file"
-	`sed -i '' "s/$a/$b/" $NEO4J_HOME/conf/neo4j.conf`
+	c="dbms.active_database=.*"
+	d="dbms.active_database=$file"
+	`sed -i -- "s/$c/$d/" $NEO4J_HOME/conf/neo4j.conf`
 	cd $NEO4J_HOME/bin
     `./neo4j-admin import --mode=database --database=$file --from=/data/graphDB/$file`
+    rm -rf /data/graphDB/$file
 done
 
 cp -r $NEO4J_HOME/data/databases/* /data/graphDB/
+
 
