--- a/platform-devops/ansible/roles/logstash/templates/logstash-word-events.j2
+++ b/platform-devops/ansible/roles/logstash/templates/logstash-word-events.j2
@@ -1,6 +1,12 @@
 
 input {
      file {
+         path => ["/data/logs/telemetry_event.log"]
+     }
+     file {
+         path => ["/data/logs/search_event.log"]
+     }
+     file {
          path => ["/data/logs/word_event.log"]
      }
 }
